2006-09-09 Yen-Ju Chen <yjchenx at gmail>

	* action.h:
	* action.m:
	update to 3.3-release (part III).
	* AZClientManager.m:
	* AZClient.m:
	update to 3.3-release (final part). So far so good.

2006-09-02 Yen-Ju Chen <yjchenx at gmail>

	* client_list_menu: Fix typo.

2006-08-31 Yen-Ju Chen <yjchenx at gmail>

	* render: Update to 3.3-release.
	* update to 3.3-release (part I).
	* client_list_menu.h:
	* client_list_menu.m:
	* AZMenu.m:
	update to 3.3-release (part II).

2006-07-06 Yen-Ju Chen <yjchenx at gmail>

	* Update-to-date.
	(New gradient rendering is not included because we may
	 use GNUstep for drawing in the future).

2006-06-17 Yen-Ju Chen <yjchenx at gmail>

	Sync with OpenBox3.
	* extension.h:
	* extension.m:
	* AZEventHandler.m:
	* AZClient.m:
	Remove VODMODE
	* AZPopup.m:
	* AZMenuFrame.m:
	SaveUnder xwindow.

2006-06-05 Quentin Mathe <qmathe@club-internet.fr>

	Fixed the repository compilation broken since XWindowServerKit 
	dependency was introduced.
	* GNUmakefile.preamble:
	* GNUmakefile.postamble:
	Added.
	* GNUmafile: Updated to include the two new files.

2006-05-27 Yen-Ju Chen <yjchenx at gmail>

	* Link to XWindowServerKit.
	* Post XCurrentWorkspaceDidChangeNotification.

2006-05-03 Yen-Ju Chen <yjchenx at gmail>

	* AZClient.m: fix borderless.

2006-05-03 Yen-Ju Chen <yjchenx at gmail>

	* Work on GNUstep/MaxOSX

2006-04-26 Yen-Ju Chen <yjchenx at gmail>

	* Set _NET_FRAME_EXTENTS when client is managed for the first time.

2006-04-24 Alex Perez <aperez at alexperez dawt com>
	* Removed unnecessary pkg-config glib include and lib flags
	  in Azalea/render/GNUmakefile which were causing lots of compilation 
	  warnings.

2006-04-23 Yen-Ju Chen <yjchenx at gmail>

	* patched by Cris Vetter for FreeBSD 6.
	* use ADDITIONAL_CPPFLAGS.

2006-04-22 Yen-Ju Chen <yjchenx at gmail>

	* use NSArray for session.
	* remove more glib.
	* fix missing sm_id.
	* Complete remove glib.
	* Make sure it compiles with minimal requirement.