@@ -1,3 +1,8 @@
+2006-09-16 Yen-Ju Chen <yjchenx at gmail>
+
+	* AZClient.m:
+	Update-to-date.
+
 2006-09-09 Yen-Ju Chen <yjchenx at gmail>
 
 	* action.h:
